fix(ui): adjust footer link heights
make height of ministry links fit-content instead of 1fr, so that
shorter rows arent stretched vertically

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -169,7 +169,7 @@ footer {
 .footer-ministries.links {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: fit-content;
   row-gap: 0.5rem;
   column-gap: 1rem;
 }
